# x86-debug

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  stack.yaml  x86-debug.cabal
app/: Main.hs
src/Language/: X86.hs
src/Language/X86/: Assembly.hs  Interpreter.hs  Lexer.hs  PP.hs  Parser.hs  Run.hs
test/: Main.hs  Parser.hs  Simple.hs  Testing.hs
